correcting the gradle build path

--- a/target-forecast/services/api/Dockerfile
+++ b/target-forecast/services/api/Dockerfile
@@ -1,15 +1,14 @@
 # Stage 1: Build the core module
 FROM gradle:8.14.0-jdk21-noble	AS     build-core
 COPY --chown=gradle:gradle . /home/gradle   
-WORKDIR /home/gradle/core
-RUN gradle clean && gradle build --no-daemon
+WORKDIR /home/gradle
+RUN gradle :core:clean :core:build --no-daemon
 
 # Stage 2: Build the API module
 FROM gradle:8.14.0-jdk21-noble	 AS     build-api
 COPY --chown=gradle:gradle . /home/gradle
-# COPY --from=build-core /home/gradle/core/build/libs/core-0.0.1-SNAPSHOT.jar /app/core-0.0.1-SNAPSHOT.jar
-WORKDIR /home/gradle/services/api
-RUN gradle clean && gradle build --no-daemon
+WORKDIR /home/gradle
+RUN gradle :services:api:clean :services:api:build --no-daemon
 
 # Stage 3: Build the final image
 FROM eclipse-temurin:21
