--- a/target-forecast/services/integration/Dockerfile
+++ b/target-forecast/services/integration/Dockerfile
@@ -1,14 +1,14 @@
 # Stage 1: Build the core module
 FROM gradle:8.14.0-jdk21-noble	AS     build-core
 COPY --chown=gradle:gradle . /home/gradle   
-WORKDIR /home/gradle/core
-RUN gradle clean && gradle build --no-daemon
+WORKDIR /home/gradle
+RUN gradle :core:clean :core:build --no-daemon
 
 # Stage 2: Build the integration module
 FROM gradle:8.14.0-jdk21-noble	 AS     build-integration
 COPY --chown=gradle:gradle . /home/gradle
-WORKDIR /home/gradle/services/integration
-RUN gradle clean && gradle build --no-daemon
+WORKDIR /home/gradle
+RUN gradle :services:integration:clean :services:integration:build --no-daemon
 
 # Stage 3: Build the final image
 FROM eclipse-temurin:21
