--- a/target-forecast/services/integration/Dockerfile
+++ b/target-forecast/services/integration/Dockerfile
@@ -1,19 +1,15 @@
-# Stage 1: Build the core module
-FROM gradle:8.14.0-jdk21-noble	AS     build-core
-COPY --chown=gradle:gradle . /home/gradle   
-WORKDIR /home/gradle
-RUN gradle :core:clean :core:build --no-daemon
-
-# Stage 2: Build the integration module
-FROM gradle:8.14.0-jdk21-noble	 AS     build-integration
+FROM gradle:8.14.0-jdk21-noble	 AS     build
 COPY --chown=gradle:gradle . /home/gradle
 WORKDIR /home/gradle
+# Build the core module
+RUN gradle :core:clean :core:build --no-daemon
+# Build the Integration module
 RUN gradle :services:integration:clean :services:integration:build --no-daemon
 
-# Stage 3: Build the final image
+# Build the final image
 FROM eclipse-temurin:21
 RUN mkdir /app
 WORKDIR /app
-COPY --from=build-integration /home/gradle/services/integration/build/libs/integration-0.0.1-SNAPSHOT.jar /app/app.jar
+COPY --from=build /home/gradle/services/integration/build/libs/integration-0.0.1-SNAPSHOT.jar /app/app.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "/app/app.jar"]
