--- a/target-demo/infra/kafka/kafka.yaml
+++ b/target-demo/infra/kafka/kafka.yaml
@@ -1,18 +1,15 @@
----
 apiVersion: v1
 kind: Service
 metadata:
   name: kafka
 spec:
   ports:
-    - name: http
-      port: 9092
-      targetPort: 9092  
+    - port: 9092
   selector:
     app: kafka
 ---
 apiVersion: apps/v1
-kind: deployment
+kind: Deployment
 metadata:
   name: kafka
 spec:
@@ -27,27 +24,17 @@ spec:
     spec:
       containers:
         - name: kafka
-          image: confluentinc/cp-kafka:7.7.1
-          imagePullPolicy: IfNotPresent          
+          image: bitnami/kafka:3.7
           ports:
             - containerPort: 9092
           env:
             - name: KAFKA_BROKER_ID
               value: "1"
-            - name: KAFKA_ZOOKEEPER_CONNECT
+            - name: KAFKA_CFG_ZOOKEEPER_CONNECT
               value: zookeeper:2181
-            - name: KAFKA_ADVERTISED_LISTENERS
+            - name: KAFKA_CFG_LISTENERS
+              value: PLAINTEXT://:9092
+            - name: KAFKA_CFG_ADVERTISED_LISTENERS
               value: PLAINTEXT://kafka:9092
-            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
-              value: PLAINTEXT:PLAINTEXT
-            - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
-              value: "1"
-          livenessProbe:
-            tcpSocket:
-              port: 9092
-            initialDelaySeconds: 15
-            periodSeconds: 10
-            timeoutSeconds: 5
-            successThreshold: 1
-            failureThreshold: 3
-          # test: [ "CMD", "nc", "-z", "localhost", "9092" ]
+            - name: ALLOW_PLAINTEXT_LISTENER
+              value: "yes"
