--- a/target-demo/infra/kafka/zookeeper.yaml
+++ b/target-demo/infra/kafka/zookeeper.yaml
@@ -4,14 +4,12 @@ metadata:
   name: zookeeper
 spec:
   ports:
-    - name: http
-      port: 2181
-      targetPort: 2181  
+    - port: 2181
   selector:
     app: zookeeper
 ---
 apiVersion: apps/v1
-kind: deployment
+kind: Deployment
 metadata:
   name: zookeeper
 spec:
@@ -26,12 +24,9 @@ spec:
     spec:
       containers:
         - name: zookeeper
-          image: confluentinc/cp-zookeeper:7.7.1
-          imagePullPolicy: IfNotPresent              
+          image: bitnami/zookeeper:3.9
           ports:
             - containerPort: 2181
           env:
-            - name: ZOOKEEPER_CLIENT_PORT
-              value: 2181
-            - name: ZOOKEEPER_TICK_TIME
-              value: "2000"
+            - name: ALLOW_ANONYMOUS_LOGIN
+              value: "yes"
