--- a/target-demo/infra/postgres/deploy.yaml
+++ b/target-demo/infra/postgres/deploy.yaml
@@ -5,16 +5,15 @@ metadata:
   name: postgres
 spec:
   ports:
-    - name: http
-      port: 5432
-      targetPort: 5432  
+    - port: 5432
+      targetPort: 5432
   selector:
     app: postgres
 ---
 apiVersion: apps/v1
-kind: deployment
+kind: Deployment
 metadata:
-  name: kafka
+  name: postgres
 spec:
   replicas: 1
   selector:
@@ -26,32 +25,35 @@ spec:
         app: postgres
     spec:
       containers:
-        - name: kafka
+        - name: postgres
           image: postgres:latest
-          imagePullPolicy: IfNotPresent          
-          ports:
-            - containerPort: 5432
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 5432
           env:
             - name: POSTGRES_USER
-              value: user
+              value: "user"
             - name: POSTGRES_PASSWORD
-              value: password
+              value: "password"
             - name: POSTGRES_DB
-              value: products_db
+              value: "products_db"
+            - name: PGDATA
+              value: "/var/lib/postgresql/data"
           volumeMounts:
-            - mountPath: /var/lib/postgresql/data
-              name: postgresdata
+            - name: postgresdata
+              mountPath: /var/lib/postgresql
       volumes:
         - name: postgresdata
           persistentVolumeClaim:
             claimName: postgres-volume-claim
-
-    # healthcheck:
-    #   test: [ "CMD-SHELL", "pg_isready -U user -d products_db" ]
-    #   interval: 10s
-    #   timeout: 5s
-    #   retries: 5
-
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: postgres-volume-claim
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
