build nettools image via docker-compose up

--- a/target-demo/docker-compose.yaml
+++ b/target-demo/docker-compose.yaml
@@ -3,6 +3,9 @@ services:
 # Network testing container
   nettools:
     image: nettools
+    build:
+      context: .
+      dockerfile: nettools.Dockerfile
     networks:
       - backend    
     # docker build -t nettools -f nettools.Dockerfile .
