--- a/target-demo/infra/kafka/kafka.yaml
+++ b/target-demo/infra/kafka/kafka.yaml
@@ -3,16 +3,21 @@ kind: Service
 metadata:
   name: kafka
 spec:
-  ports:
-    - port: 9092
+  clusterIP: None  # headless service
   selector:
     app: kafka
+  ports:
+    - port: 9092
+      name: client
+    - port: 9093
+      name: controller
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: kafka
 spec:
+  serviceName: "kafka"
   replicas: 1
   selector:
     matchLabels:
@@ -22,19 +27,31 @@ spec:
       labels:
         app: kafka
     spec:
+      hostname: kafka-0
       containers:
         - name: kafka
-          image: bitnami/kafka:3.7
+          image: bitnami/kafka:4.0
           ports:
             - containerPort: 9092
+              name: client
+            - containerPort: 9093
+              name: controller
           env:
-            - name: KAFKA_BROKER_ID
-              value: "1"
-            - name: KAFKA_CFG_ZOOKEEPER_CONNECT
-              value: zookeeper:2181
+            - name: KAFKA_CFG_NODE_ID
+              value: "0"
+            - name: KAFKA_CFG_PROCESS_ROLES
+              value: controller,broker
+            - name: KAFKA_KRAFT_CLUSTER_ID
+              value: abcdefghijklmnopqrstuv
+            - name: KAFKA_CFG_CONTROLLER_QUORUM_VOTERS
+              value: 0@kafka-0.kafka:9093
             - name: KAFKA_CFG_LISTENERS
-              value: PLAINTEXT://:9092
+              value: PLAINTEXT://:9092,CONTROLLER://:9093
             - name: KAFKA_CFG_ADVERTISED_LISTENERS
-              value: PLAINTEXT://kafka:9092
-            - name: ALLOW_PLAINTEXT_LISTENER
-              value: "yes"
+              value: PLAINTEXT://kafka-0.kafka:9092
+            - name: KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP
+              value: PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
+            - name: KAFKA_CFG_CONTROLLER_LISTENER_NAMES
+              value: CONTROLLER
+            - name: KAFKA_CFG_INTER_BROKER_LISTENER_NAME
+              value: PLAINTEXT
