--- a/target-demo/infra/ingress.yaml
+++ b/target-demo/infra/ingress.yaml
@@ -4,9 +4,7 @@ kind: Ingress
 metadata:
   name: target-demo
   annotations:
-    # kubernetes.io/ingress.class: "nginx"
     cert-manager.io/cluster-issuer: letsencrypt-prod
-    # kubernetes.io/tls-acme: 'true'
 spec:
   ingressClassName: nginx
   rules:
@@ -22,5 +20,5 @@ spec:
             pathType: Prefix
   tls:
     - hosts:
-        - "target-ai.spinachsoftware.com"
+        - target-ai.spinachsoftware.com
       secretName: target-ai.spinachsoftware.com
